1주차 리뷰 요청드립니다. (#102)
* docs: 프로젝트 안내와 작업 지침 추가

* fix: 예약 시작일을 오늘부터 30일 이내로 제한

* fix: 신규 예약 전화번호 필수 및 형식 검증

* fix: 예약 변경 전화번호 검증과 취소 예약 재예약 처리

* docs: 인수 조건을 Given-When-Then 형식으로 간소화

* docs: 요구사항에 없는 최대 예약 기간 제한을 티켓으로 추가

* fix: 신규 예약 전화번호 검증 범위를 필수 여부로 한정

* fix: T-3 예약 변경 시 전화번호 부분 변경 지원

* docs: 예약 변경의 시작일 범위 정책 확인 별도 티켓으로 추가

* test: 예약 생성의 기존 규칙을 인수 테스트로 보강

* fix: 취소 상태 판단 기준을 통일하고 재예약 흐름을 검증